--- a/src/app/tela-perfil/tela-perfil.page.html
+++ b/src/app/tela-perfil/tela-perfil.page.html
@@ -153,18 +153,6 @@
     <ion-toggle slot="end" (ionChange)="toggleDarkMode($event)"></ion-toggle>
   </div> -->
 
-        <div
-          class="flex justify-between items-center p-2 rounded-lg hover:bg-gray-100 transition cursor-pointer"
-        >
-          <div class="flex items-center gap-2 text-mainWine">
-            <ion-icon name="key-outline" class="text-lg"></ion-icon>
-            <span>Alterar Senha</span>
-          </div>
-          <ion-icon
-            name="chevron-forward-outline"
-            class="text-gray-400"
-          ></ion-icon>
-        </div>
 
         <div
           class="flex justify-between items-center p-2 rounded-lg hover:bg-gray-100 transition cursor-pointer"
@@ -195,7 +183,7 @@
         <div
           class="flex justify-between items-center p-2 rounded-lg hover:bg-gray-100 transition cursor-pointer"
         >
-          <div class="flex items-center gap-2 text-mainWine">
+          <div  (click)="politicas()" class="flex items-center gap-2 text-mainWine">
             <ion-icon
               name="shield-checkmark-outline"
               class="text-lg"
