--- a/src/app/tela-perfil/tela-perfil.page.html
+++ b/src/app/tela-perfil/tela-perfil.page.html
@@ -66,7 +66,7 @@
       </div>
 
       <div class="flex flex-col items-center mb-6 mt-6">
-        <h2 class="text-xl font-bold text-mainWine">Olá, Nome!</h2>
+        <h2 class="text-xl font-bold text-mainWine">Olá, {{ nomeUsuario || 'Usuário' }}</h2>
         <p class="text-sm text-gray-500">alguma outra informacao de cadastro</p>
 
         <button
@@ -180,10 +180,10 @@
           ></ion-icon>
         </div>
 
-        <div
+        <div (click)="politicas()"
           class="flex justify-between items-center p-2 rounded-lg hover:bg-gray-100 transition cursor-pointer"
         >
-          <div  (click)="politicas()" class="flex items-center gap-2 text-mainWine">
+          <div  class="flex items-center gap-2 text-mainWine">
             <ion-icon
               name="shield-checkmark-outline"
               class="text-lg"
